lab02-deploy-with-argocd/mainfest/namepsace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nodejs-hello-world
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
