lab02-deploy-with-argocd/mainfest/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nodejs-hello-world
  name: nodejs-hello-world
  namespace: nodejs-hello-world
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: nodejs-hello-world
